handling sip hooks as a cache
